--- a/composer.json
+++ b/composer.json
@@ -17,11 +17,12 @@
     ],
     "require": {
         "php": "^7.1",
-        "illuminate/support": "5.6.*"
+        "illuminate/support": "5.7.*",
+        "illuminate/routing": "^5.7"
     },
     "require-dev": {
-        "orchestra/testbench": "3.8.*",
-        "phpunit/phpunit": "^7.0"
+        "phpunit/phpunit": "^5.3",
+        "mockery/mockery": "^0.9.4"
     },
     "autoload": {
         "psr-4": {
