--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
     ],
     "require": {
         "php": "^7.1",
-        "illuminate/routing": "^5.7"
+        "illuminate/routing": "^5.7|^6.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^5.3",
